always set width and height on svg on my courses as well to prevent plugin svgs from growing too large, fixes #6358
Closes #6358

Merge request studip/studip!4818

--- a/resources/assets/stylesheets/scss/my_courses.scss
+++ b/resources/assets/stylesheets/scss/my_courses.scss
@@ -37,6 +37,8 @@ $icon-padding: 3px;
     }
 
     svg {
+        height: var(--icon-size-default);
+        width: var(--icon-size-default);
         vertical-align: bottom;
     }
 
